package br.ifs.cads.barbearia.model;

import jakarta.persistence.Entity;
import jakarta.persistence.OneToMany;

import java.util.List;

@Entity
public class Barbearia extends AuditModel {
    private String nome;
    private String endereco;
    @OneToMany(mappedBy="barbeariaFavorita")
    private List<Cliente> clientes;

    @OneToMany(mappedBy="barbearia")
    private List<Funcionario> funcionarios;

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public String getEndereco() {
        return endereco;
    }

    public void setEndereco(String endereco) {
        this.endereco = endereco;
    }
}
