package br.ifs.cads.barbearia.model;

import jakarta.persistence.Entity;

@Entity
public class ProcedimentoFuncionario extends AuditModel {
}
